test/expected/explain_a0i.out
explain int a[0]
             ^
14: error: array dimension must be > 0
